--- a/MudXExamples/MudXExamples.csproj
+++ b/MudXExamples/MudXExamples.csproj
@@ -6,11 +6,17 @@
         <ImplicitUsings>enable</ImplicitUsings>
     </PropertyGroup>
 
+    <PropertyGroup Condition=" '$(RunConfiguration)' == 'Mudblazor.Template' ">
+      <ExternalConsole>true</ExternalConsole>
+    </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7"/>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all"/>
-        <PackageReference Include="MudBlazor" Version="6.0.13"/>
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
+        <PackageReference Include="MudBlazor" Version="6.0.13" />
     </ItemGroup>
 
 
+    <ItemGroup>
+      <None Include="..\.editorconfig" />
+    </ItemGroup>
 </Project>
