--- a/MudXExamples/MudXExamples.csproj
+++ b/MudXExamples/MudXExamples.csproj
@@ -10,13 +10,19 @@
       <ExternalConsole>true</ExternalConsole>
     </PropertyGroup>
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.7" />
-        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.7" PrivateAssets="all" />
-        <PackageReference Include="MudBlazor" Version="6.0.13" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="6.0.9" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="6.0.9" PrivateAssets="all" />
+        <PackageReference Include="MudBlazor" Version="6.0.16" />
     </ItemGroup>
 
 
     <ItemGroup>
       <None Include="..\.editorconfig" />
+    </ItemGroup>
+
+
+    <ItemGroup>
+      <ProjectReference Include="..\MudXComponents.Shared\MudXComponents.Shared.csproj" />
+      <ProjectReference Include="..\MudXComponents\MudXComponents.csproj" />
     </ItemGroup>
 </Project>
