--- a/MudXComponents/MudXComponents.csproj
+++ b/MudXComponents/MudXComponents.csproj
@@ -17,6 +17,7 @@
     <ItemGroup>
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.9" />
         <PackageReference Include="MudBlazor" Version="6.0.16" />
+        <PackageReference Include="FastDeepCloner" Version="1.3.6" />
     </ItemGroup>
 
     <ItemGroup>
@@ -26,6 +27,7 @@
       <None Remove="Components\" />
       <None Remove="MudBlazor" />
       <None Remove="Interfaces\" />
+      <None Remove="FastDeepCloner" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Args\" />
