--- a/MudXComponents/MudXComponents.csproj
+++ b/MudXComponents/MudXComponents.csproj
@@ -18,6 +18,7 @@
         <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.9" />
         <PackageReference Include="MudBlazor" Version="6.0.16" />
         <PackageReference Include="FastDeepCloner" Version="1.3.6" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
     </ItemGroup>
 
     <ItemGroup>
@@ -28,6 +29,8 @@
       <None Remove="MudBlazor" />
       <None Remove="Interfaces\" />
       <None Remove="FastDeepCloner" />
+      <None Remove="MemoryCache\" />
+      <None Remove="Microsoft.Extensions.Caching.Memory" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Args\" />
@@ -35,5 +38,6 @@
       <Folder Include="Extensions\" />
       <Folder Include="Components\" />
       <Folder Include="Interfaces\" />
+      <Folder Include="Cache\" />
     </ItemGroup>
 </Project>
