--- a/MudXComponents/MudXComponents.csproj
+++ b/MudXComponents/MudXComponents.csproj
@@ -15,10 +15,11 @@
     </ItemGroup>
 
     <ItemGroup>
-        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.9" />
-        <PackageReference Include="MudBlazor" Version="6.0.16" />
+        <PackageReference Include="Microsoft.AspNetCore.Components.Web" Version="6.0.10" />
+        <PackageReference Include="MudBlazor" Version="6.0.17" />
         <PackageReference Include="FastDeepCloner" Version="1.3.6" />
         <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="6.0.1" />
+        <PackageReference Include="FastMember" Version="1.5.0" />
     </ItemGroup>
 
     <ItemGroup>
@@ -32,6 +33,7 @@
       <None Remove="MemoryCache\" />
       <None Remove="Microsoft.Extensions.Caching.Memory" />
       <None Remove="Attributes\" />
+      <None Remove="FastMember" />
     </ItemGroup>
     <ItemGroup>
       <Folder Include="Args\" />
